src/yaml/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: httpserver
          image: tlqiao/httpserver:0.1
          ports:
            - containerPort: 8090
