src/yaml/load-balance-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: load-balancer-example
  name: load-balancer-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: load-balancer-example
  type: LoadBalancer
  externalIPs:
  - 192.168.110.120
