src/yaml/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: load-balancer-example
  ports:
    - name: http
      port: 8080
      targetPort: 80
      nodePort: 30000
