src/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app: httpserver
  name: httpsvc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8090
  selector:
    app: httpserver
  type: LoadBalancer
